--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,44 @@
-/**index.wxss**/
-.userinfo {
+.swiper-box swiper {
+  width: 750rpx;
+  height: 340rpx;
+}
+.swiper-box swiper image {
+  width: 100%;
+}
+.cate-box {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  padding: 20rpx;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.cate-box navigator {
+  flex: 1;
 }
-
-.userinfo-nickname {
-  color: #aaa;
+.cate-box navigator image {
+  width: 100%;
 }
-
-.usermotto {
-  margin-top: 200px;
+.index-floor .floor-group .floor-title {
+  padding: 10rpx 0;
+}
+.index-floor .floor-group .floor-title image {
+  width: 100%;
+}
+.index-floor .floor-group .floor-list {
+  overflow: hidden;
+  margin: 0 10rpx;
+}
+.index-floor .floor-group .floor-list navigator {
+  float: left;
+  width: 33.33%;
+}
+.index-floor .floor-group .floor-list navigator:nth-last-child(-n+4) {
+  height: 27.72711207vw;
+  border-left: 10rpx solid #fff;
+}
+.index-floor .floor-group .floor-list navigator:nth-child(2),
+.index-floor .floor-group .floor-list navigator:nth-child(3) {
+  border-bottom: 10rpx solid #fff;
+}
+.index-floor .floor-group .floor-list navigator image {
+  width: 100%;
+  height: 100%;
 }
