--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -1,1 +1,48 @@
-/* pages/category/index.wxss */
+page {
+  height: 100%;
+}
+.category {
+  height: 100%;
+}
+.category .category-container {
+  height: calc(100vh - 90rpx);
+  display: flex;
+}
+.category .category-container .left-menu {
+  flex: 2;
+}
+.category .category-container .left-menu .menu-item {
+  height: 80rpx;
+  display: flex;
+  justify-content: center;
+  padding: 10rpx 0 ;
+  font-size: 30rpx;
+}
+.category .category-container .left-menu .active {
+  color: var(--themeColor);
+  border-left: 1px solid currentColor;
+}
+.category .category-container .right-content {
+  flex: 5;
+}
+.category .category-container .right-content .goods-group .goods-title {
+  height: 80rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.category .category-container .right-content .goods-group .goods-title .delimiter {
+  color: #ccc;
+  padding: 0 10rpx;
+}
+.category .category-container .right-content .goods-group .goods-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.category .category-container .right-content .goods-group .goods-list navigator {
+  width: 33.33%;
+  text-align: center;
+}
+.category .category-container .right-content .goods-group .goods-list navigator image {
+  width: 50%;
+}
