--- a/components/searchInput/searchInput.wxml
+++ b/components/searchInput/searchInput.wxml
@@ -1,4 +1,4 @@
 <view class="mall-search">
-    <navigator class=""  url="/pages/search/index" open-type="navigate">搜索</navigator>  
+    <navigator url="/pages/search/index" open-type="navigate">搜索</navigator>  
 </view>
   
