--- a/pages/goods_list/index.wxml
+++ b/pages/goods_list/index.wxml
@@ -1,2 +1,20 @@
-<!--pages/goods_list/index.wxml-->
-<text>pages/goods_list/index.wxml</text>
+<view class="goods-list">
+    <SearchInput></SearchInput>
+    <Tabs tabs="{{tabs}}" bindtabItemChange="handleTabItemChange">
+        <block wx:if="{{tabs[0].isActive}}">
+            <view class="first-tab">
+                <navigator class="goods-item" wx:for="{{goodsList}}" wx:key="goods_id">
+                    <view class="left-img-wrap">
+                        <image mode="widthFix" src="{{item.goods_small_logo?item.goods_small_logo:defaultImgUrl}}"></image>
+                    </view>
+                    <view class="goods-info-wrap">
+                        <view class="goods-name">{{item.goods_name}}</view>
+                        <view class="goods-price">￥{{item.goods_price}}</view>
+                    </view>
+                </navigator>
+            </view>
+        </block>
+        <block wx:elif="{{tabs[1].isActive}}">1</block>
+        <block wx:elif="{{tabs[2].isActive}}">2</block>
+    </Tabs>
+</view>
