--- a/pages/goods_detail/index.less
+++ b/pages/goods_detail/index.less
@@ -1,3 +1,6 @@
+page{
+    padding-bottom: 90rpx;
+}
 .goods-detail{
     .swiper-wrap{
         swiper{
@@ -51,3 +54,44 @@
         }
     }
 }
+.footer-tools{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height: 90rpx;
+    width: 100%;
+    background-color: #fff;
+    display: flex;
+    border-top: 1px solid #ccc;
+    .tools-item{
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      font-size: 24rpx;
+      font-weight: 600rpx;
+      position: relative;
+      button{
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          height: 100%;
+          width: 100%;
+          opacity: 0;
+      }
+    }
+    .item-cart,.item-buy{
+        flex: 2;
+        background-color: #ffa500;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30rpx;
+        font-weight: 600rpx;
+        color: #fff;
+    }
+    .item-buy{
+        background-color: var(--themeColor);
+    }
+  }
