--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,7 +5,9 @@
 	<view class="swiper-box">
 		<swiper autoplay indicator-dots interval="5000" duration="500" circular>
 			<swiper-item wx:for="{{swiperList}}" wx:key="goods_id">
-				<image mode="widthFix" src="{{item.image_src}}"></image>
+				<navigator  url="{{item.navigator_url}}" open-type="navigate">
+					<image mode="widthFix" src="{{item.image_src}}"></image>
+				</navigator>
 			</swiper-item>
 		</swiper>
 	</view>
@@ -22,7 +24,7 @@
 				<image mode="widthFix" src="{{item1.floor_title.image_src}}"></image>
 			</view>
 			<view class="floor-list">
-				<navigator wx:for="{{item1.product_list}}" wx:for-item="item2" wx:for-index="index2" wx:key="name">
+				<navigator wx:for="{{item1.product_list}}" wx:for-item="item2" wx:for-index="index2" wx:key="name" url="{{item2.navigator_url}}" open-type="navigate">
 					<image mode="{{index2===0?'widthFix':'scaleToFill'}}" src="{{item2.image_src}}"></image>
 				</navigator>
 			</view>
