feat: 购物车页面完成

--- a/pages/cart/index.less
+++ b/pages/cart/index.less
@@ -45,10 +45,6 @@ page{
                 justify-content: center;
                 align-items: center;
                 display: flex;
-
-                checkbox-group {
-                    checkbox.checkbox-item {}
-                }
             }
 
             .image-wrap {
@@ -102,6 +98,12 @@ page{
                 }
 
             }
+        }
+        .no-data-text{
+            text-align:center;
+            color:var(--themeColor);
+            font-size:30rpx;
+            padding:20 0rpx;
         }
     }
 }
