--- a/pages/pay/index.wxml
+++ b/pages/pay/index.wxml
@@ -1,2 +1,41 @@
-<!--pages/pay/index.wxml-->
-<text>pages/pay/index.wxml</text>
+<view class="cart-page">
+    <view class="address-detail-row">
+        <view class="address-info">
+            <view class="user-name">收货人: {{address.userName}}</view>
+            <view class="user-phone">{{address.telNumber}}</view>
+        </view>
+        <view class="address">{{address.all}}</view>
+    </view>
+    <view class="cart-goods-wrap">
+        <view class="cart-goods-title">购物车</view>
+        <view class="cart-goods-main">
+            <view class="cart-goods-item" wx:for="{{cart}}" wx:key="goods_id">
+                <navigator class="image-wrap">
+                    <image src="{{item.goods_small_logo}}" mode="widthFix"></image>
+                </navigator>
+                <view class="goods-info">
+                    <view class="goods-name">
+                        {{item.goods_name}}
+                    </view>
+                    <view class="goods-price-info">
+                        <view class="price-text">￥{{item.goods_price}}</view>
+                        <view class="nun-tools-wrap">
+                            <view class="num-text">×{{item.num}}</view>
+                        </view>
+                    </view>
+                </view>
+            </view>
+        </view>
+    </view>
+    <!-- 底部工具栏 -->
+    <view class="footer-tool">
+        <view class="total-price-wrap">
+            <view class="total-price">
+                合计：
+                <text class="total-price-text">￥{{totalPrice}}</text>
+            </view>
+            <view class="tips">包含运费</view>
+        </view>
+        <view class="order-pay-wrap" bindtap="handleOrderPay">支付({{totalNum}})</view>
+    </view>
+</view>
