feat: 添加昵称样式

--- a/pages/user/index.less
+++ b/pages/user/index.less
@@ -21,6 +21,10 @@ page{
             height: 100rpx !important;
             border-radius: 50%;
         }
+        .user-nickname{
+            margin-top:40rpx;
+            color: #666;
+        }
       }
     }
   }
