--- a/pages/user/index.wxss
+++ b/pages/user/index.wxss
@@ -23,6 +23,10 @@ page {
   height: 100rpx !important;
   border-radius: 50%;
 }
+.user-info-wrap .user-img-wrap .user-bg .user-nickname {
+  margin-top: 40rpx;
+  color: #666;
+}
 .top-info {
   position: relative;
   display: flex;
